# lutra-gfx

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
efvk/: CMakeLists.txt  efvk.cpp  efvk.h
include/efvk/: Buffer.h  CommandBuffer.h  CommonStructs.h  DepthStencilBuffer.h  FrameManager.h  GraphicsContext.h  GraphicsPipeline.h  ImGuiWrapper.h  Image.h  Keyboard.h  Mouse.h  SpriteBatch.h  Texture.h  Utils.h  Window.h
include/efvk/math/: Camera2D.h  Color.h  IntDefs.h  Rectangle.h  vec.h
include/lutra-gfx/: Buffer.h  CommandBuffer.h  CommonStructs.h  DepthStencilBuffer.h  Event.h  FrameManager.h  GraphicsContext.h  GraphicsPipeline.h  ImGuiWrapper.h  Image.h  InputManager.h  Keyboard.h  Mouse.h  Texture.h  Window.h
samples/: CMakeLists.txt  SpriteBatch.cpp  SpriteBatch.h  sample1.cpp
samples/shaders/: SpriteBatchShader.hlsl  SpriteBatchShader.vert.spv
src/: Event.h  FrameManager.cpp  FrameManager.h  GraphicsContext.cpp  GraphicsContext.h  InputManager.cpp  InputManager.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  Utils.h  Window.cpp  Window.h  main.cpp
src/efvk/: Buffer.cpp  Buffer.h  BufferMemoryAllocator.cpp  BufferMemoryAllocator.h  CommandBuffer.cpp  CommandBuffer.h  DepthStencilBuffer.cpp  DescriptorAllocator.cpp  DescriptorAllocator.h  DescriptorWriteCache.cpp  DescriptorWriteCache.h  FrameManager.cpp  FrameManagerImpl.h  GraphicsContext.cpp  GraphicsContextImpl.h  GraphicsPipeline.cpp  GraphicsPipeline.h  ImGuiWrapper.cpp  Mouse.cpp  SpriteBatch.cpp  Texture.cpp  TextureImpl.h  VulkanHPP.h  Window.cpp
src/efvk/internal/: BufferInternal.cpp  BufferInternal.h  BufferMemoryAllocator.h  CommandBufferInternal.cpp  CommandBufferInternal.h  DepthStencilBufferInternal.cpp  DescriptorWriteCache.cpp  DescriptorWriteCache.h  FrameManagerInternal.cpp  FrameManagerInternal.h  GraphicsContextInternal.cpp  GraphicsContextInternal.h  GraphicsPipelineInternal.cpp  GraphicsPipelineInternal.h  TextureInternal.cpp  TextureInternal.h  VulkanHPP.h
src/efvk/shaders/: SpriteBatchShader.frag.spv  SpriteBatchShader.hlsl  SpriteBatchShader.vert.spv  compile.txt
src/lutra-gfx/: Buffer.cpp  CommandBuffer.cpp  DepthStencilBuffer.cpp  FrameManager.cpp  GraphicsContext.cpp  GraphicsPipeline.cpp  ImGuiWrapper.cpp  Image.cpp  InputManager.cpp  Keyboard.cpp  Mouse.cpp  Texture.cpp  Window.cpp
src/lutra-gfx/internal/: BufferInternal.cpp  BufferInternal.h  BufferMemoryAllocator.cpp  BufferMemoryAllocator.h  CommandBufferInternal.cpp  CommandBufferInternal.h  CommonHelpers.h  DepthStencilBufferInternal.cpp  DepthStencilBufferInternal.h  DescriptorAllocator.cpp  DescriptorAllocator.h  DescriptorWriteCache.cpp  DescriptorWriteCache.h  FrameManagerInternal.cpp  FrameManagerInternal.h  GraphicsContextInternal.cpp  GraphicsContextInternal.h  GraphicsPipelineInternal.cpp  GraphicsPipelineInternal.h  TextureInternal.cpp  TextureInternal.h  VolkUsage.cpp  VulkanHPP.h
tests/: CMakeLists.txt  tests.cpp
